# dislib

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Jenkinsfile  LICENSE  MANIFEST.in  NOTICE  QUICKSTART.md  README.md  build_hecuba.sh  cfg  codecov.yml  enqueue_tests.sh  killcompss.py  launch_cassandra.sh  myfile.txt  myfile2.txt  pyproject.toml  quickstart.md  requirements.txt  requirements_ci.txt  requirements_gpu.txt  requirements_tests.txt  requirements_torch.txt  run_ci_checks.sh  run_coverage.sh  run_gpu_cov.sh  run_style.sh  run_test_nesting.sh  run_tests.sh  run_travis_checks.sh  setup.py  test_als.py  test_array.py  (+13 more)
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  pull-request-template.md
dislib/: __init__.py
dislib/classification/: __init__.py
dislib/cluster/: __init__.py
dislib/cmd/: __init__.py  base.py
dislib/data/: __init__.py  array.py  array_block.py  base.py  classes.py  ds_tensor.py  io.py  tensor.py
dislib/decomposition/: __init__.py
dislib/eddl/: EddlDistributedConmutativo.py  EncapsulateFunctionTensor.py  __init__.py  eddlDistributedConmutativo.py  eddl_distributed_conmutativo.py  encapsulateFunctionTensor.py  encapsulate_function_distributed.py  models.py  net_utils.py  utils.py
docker/: Dockerfile  Dockerfile.base  Dockerfile.ci  Dockerfile.torch  build.sh  build_base.sh  push.sh
docs/: .buildinfo  .readthedocs.yaml  Makefile  conf.py  dislib.html  dislib.rst  index.rst  objects.inv  search.html
examples/: admm.py  als_driver.py  classifier_comparison.py  clustering_comparison.py  csvm-driver.py  csvm_driver.py  dbscan-driver.py  gm_covariance_types_comp.py  gridsearchcv.py  image_partition.py  kmeans-driver.py  kmeans.py  lasso.py  linear_regression_plot.py  prova_nested.py  recommendation-driver.py  recommendation_driver.py  rf-driver.py  rf_iris.py  test.py
notebooks/: estimators.ipynb  tutorial.ipynb
scripts/: clean.sh  create_packages.sh
tests/: __init__.py  __main2__.py  __main__.py  def _merge_blocks(blocks):.py  func_sum_and_mult.py  hello_world.py  test_als.py  test_array.py  test_array_or.py  test_array_persistent.py  test_csvm.py  test_data.py  test_data_utils.py  test_daura.py  test_dbscan.py  test_decision_tree.py  test_decision_tree_distributed.py  test_distributed_eddl.py  test_distributed_pytorch.py  test_estimator_interface.py  test_fft.py  test_file.py  test_gm.py  test_gridsearch.py  test_hecuba.py  test_hecuba2.py  test_hecuba_dislib.py  test_kfold.py  test_kmeans.py  test_knn.py  test_kronecker.py  test_lanczos.py  test_lasso.py  test_linear_regression.py  test_matmul.py  test_merge.py  test_nn.py  test_pca.py  test_preproc.py  test_qr.py  (+23 more)
tests_coverage/: __init__.py  __main__.py  test_daura.py  test_decision_tree_nested.py  test_kfold.py  test_kmeans.py  test_tsqr.py
tests_nesting/: test_decision_tree_nested.py  test_rf_classifier_nested.py  test_rf_regressor_nested.py
(+272 files in other folders)
