[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "dislib"
dynamic = ["version", "dependencies", "optional-dependencies"]
authors = [
  { name="Workflows and Distributed Computing Group (WDC) - Barcelona Supercomputing Center (BSC)", email="compss@bsc.es" },
]
maintainers = [
  { name="Workflows and Distributed Computing Group (WDC) - Barcelona Supercomputing Center (BSC)", email="support-compss@bsc.es" },
]
description = "The distributed computing library on top of PyCOMPSs"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
keywords = ["distributed computing", "PyCOMPSs", "COMPSs", "Machine Learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: System :: Distributed Computing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.setuptools.packages.find]  # Using flat-layout without automatic discovery
where = ["."]  # Default folder
include = ["dislib*"]
exclude = ["tests*", "tests_nesting*"]  # Added to MANIFEST.in
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.setuptools.dynamic]
version = { file = ["VERSION"] }
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
tests = { file = ["requirements_tests.txt"] }
gpu = { file = ["requirements_gpu.txt"] }

[project.urls]
Homepage = "http://dislib.bsc.es"
Documentation = "https://dislib.readthedocs.io"
Repository = "https://github.com/bsc-wdc/dislib"
Issues = "https://github.com/bsc-wdc/dislib/issues"
Changelog = "https://github.com/bsc-wdc/dislib/blob/master/CHANGELOG.md"

# [project.scripts]
# dislib-cli = "dislib:main_cli"

# [tool.bandit]
# exclude_dirs = ["notebooks/",
#                 "scripts/"]
# tests = []
# skips = [
#     "B301",  # skips pickle
#     "B403",  # skips import_pickle
#     "B404",  # skips import_subprocess
#     "B603",  # skips subprocess_without_shell_equals_true
#     "B311",  # skips random
# ]

# [tool.bandit.assert_used]
# skips = ["*/test_*.py"]  # skips assertions in unittest files
